@@ -24,4 +24,3 @@ List of files:
 /LayoutTests/imported/w3c/web-platform-tests/notifications/instance.html
 /LayoutTests/imported/w3c/web-platform-tests/notifications/lang.html
 /LayoutTests/imported/w3c/web-platform-tests/notifications/permission.html
-/LayoutTests/imported/w3c/web-platform-tests/notifications/shownotification-resolve-manual.https.html
