@@ -1,5 +1,13 @@
 2020-11-18  Chris Dumez  <cdumez@apple.com>
 
+        Unreviewed, drop manual test in web-platform-tests/notifications.
+
+        * web-platform-tests/notifications/shownotification-resolve-manual.https-expected.txt: Removed.
+        * web-platform-tests/notifications/shownotification-resolve-manual.https.html: Removed.
+        * web-platform-tests/notifications/w3c-import.log:
+
+2020-11-18  Chris Dumez  <cdumez@apple.com>
+
         REGRESSION (r269598): [ Mac ] imported/w3c/web-platform-tests/html/semantics/embedded-content/the-iframe-element/iframe-network-error.sub.html is flaky failing
         https://bugs.webkit.org/show_bug.cgi?id=219008
         <rdar://problem/71463894>
